Prevent buttons from growing full width on mobile

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -52,6 +52,9 @@
 
   .p-side-navigation__toggle,
   .p-side-navigation__toggle--in-drawer {
+    // override base button styles that extend button to full width on mobile
+    width: auto;
+
     &::before {
       @extend %icon;
 
